--- a/start.html
+++ b/start.html
@@ -14,7 +14,7 @@
     </div>
     <hr>
     <div>
-        <input type="range" min="0" max="100" step="2" autofocus> 
+        <input type="number" min="0" max="100" step="2" autofocus> 
     </div>
     <hr>
     <div>
